# aws_ecs

./: README.md  pyproject.toml
experiments/: one.ipynb
src/: main.py
src/data_classes/: __init__.py  data_classes.py
src/routers/: users.py
src/server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/style/: home.css  login.css
templates/: home.html  login.html
